# labelled_numerics

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md
labelled_numerics/: __init__.py  setup_logger.py
labelled_numerics/geometry/: __init__.py  geometry.py
labelled_numerics/roman_numbers/: __init__.py  roman_numbers.py
labelled_numerics/tests/: test_roman_numbers.py
labelled_numerics/utils/: __init__.py  labelled_numerics.py
mypackage/: __init__.py
mypackage/geometry/: __init__.py  geometry.py
mypackage/roman_numbers/: roman_numbers.py
mypackage/tests/: test_add_to.py  test_arab2roman.py  test_conversion.py  test_divide.py  test_roman2arab.py  test_roman_numbers.py
mypackage/utils/: labelled_numerics.py
