[build-system]
requires = ["flit_core >=3.2,<4"] # what to use to build package, others hatch, poetry (package managers for automatic creation of toml), etc. ...
build-backend = "flit_core.buildapi" # how to built package

[project]
name = "mypackage"
version = "0.1.1"
description = "My first package"
license = {file = "LICENSE.txt"}

authors = [{name = "Katharina Hoeveler", email = "katharina.hoeveler@gmx.ch"}]
maintainers = [
    {name = "Katharina Hoeveler", email="katharina.hoeveler@gmx.ch"},
]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [ # it will instaLL also sub dependencies
  "httpx",
  "gidgethub>4.0.0",
]
[project.optional-dependencies]
dev = [
  "bumpver==2023.1129",
  "pre-commit==3.5.0",
  "pytest==7.4.3",
  "pytest-cov==2.6.1",
]
docs = [
  "sphinx==4.2.0",
  "sphinx-rtd-theme==1.0.0",
]
classifiers = [
    'Development Status :: 0 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: C', # COMPATABILITIES (as tags)
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.urls]
#homepage = "https://numpy.org"
#documentation = "https://numpy.org/doc/"
source = "https://github.com/hoevelek/mypackage/tree/main/mypackage"
#download = "https://pypi.org/project/numpy/#files"
#tracker = "https://github.com/numpy/numpy/issues"
#"release notes" = "https://numpy.org/doc/stable/release"



#create virtual environment
#python -m venv .venv_tutorial_kaho
# activate virtual environment
#source .venv_tutorial_kaho/bin/activate or Wind.: .\.venv_tutorial_kaho\Scripts\Activate.ps1
# activate virtual environment in terminal
#deactivate virtual environment
#deactivate
